# these are the headers for your project
noinst_HEADERS = storefront.h

#########################################################################
# APPLICATION SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
bin_PROGRAMS = storefront

# the application source, library search path, and link libraries
storefront_SOURCES = storefront.cpp
storefront_LDFLAGS = $(WX_LIBS) 

