####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = dnd3
dnd3_SOURCES = main.cpp 
dnd3_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp monster.h human.h droupoustd.h Dice.h Aboleth.mon Achaierai.mon Allip.mon Ankheg.mon Aranea.mon ArrowHawk_Adult.mon ArrowHawk_Elder.mon ArrowHawk_Juvenile.mon Assassin Vine.mon Athach.mon Azer.mon Barghest Large.mon Barghest Medium-Size.mon Basilisk.mon Behir.mon Beholder.mon Belker.mon Blink Dog.mon Bodak.mon Bugbear.mon Bulette.mon Carrion Crawler.mon Celestial Astral Deva.mon Celestial Avoral (Guardianal).mon Celestial Deva.mon Celestial Ghaele (Eladrin).mon Celestial Hound Archon.mon Celestial Lantern Archon.mon Celestial Planetar.mon Celestial Solar.mon Celestial Trumpet Archon.mon Centaur.mon Chaos Beast.mon Chimera.mon Choker.mon Chuul.mon Elf.mon Ethereal Filcher.mon Orc.mon 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = dnd3
